@@ -39,9 +39,9 @@ import sys
 import natsort
 import mimetypes
 try:
-    from urlparse import urlparse, urlsplit, urlunsplit, urljoin, unquote
+    from urlparse import urlparse, urlsplit, urlunsplit, urljoin, unquote, parse_qs
 except ImportError:
-    from urllib.parse import urlparse, urlsplit, urlunsplit, urljoin, unquote  # NOQA
+    from urllib.parse import urlparse, urlsplit, urlunsplit, urljoin, unquote, parse_qs  # NOQA
 
 try:
     import pyphen
@@ -1433,7 +1433,14 @@ class Nikola(object):
         # Refuse to replace links that are full URLs.
         if dst_url.netloc:
             if dst_url.scheme == 'link':  # Magic link
-                dst = self.link(dst_url.netloc, dst_url.path.lstrip('/'), lang)
+                if dst_url.query:
+                    # If query strings are used in magic link, they will be
+                    # passed to the path handler as keyword arguments (strings)
+                    link_kwargs = {k: v[-1] for k, v in parse_qs(dst_url.query).items()}
+                else:
+                    link_kwargs = {}
+
+                dst = self.link(dst_url.netloc, dst_url.path.lstrip('/'), lang, **link_kwargs)
             # Assuming the site is served over one of these, and
             # since those are the only URLs we want to rewrite...
             else:
